# hud-ui-cube

./: Dockerfile  README.md  entrypoint.sh  env.py  hud.lock.yaml  local_test.py  pyproject.toml
prompts/: system_prompt.py
scenarios/: __init__.py  deterministic.py
setup/: __init__.py
tools/: __init__.py  browser.py  computer.py
